RESOLVED FIXED91931
Web Inspector: Redundant Style Declarations Missing in Styles Section
https://bugs.webkit.org/show_bug.cgi?id=91931
Summary Web Inspector: Redundant Style Declarations Missing in Styles Section
Justin Lowery
Reported 2012-07-21 11:11:00 PDT
Created attachment 153673 [details] Screenshot of problem. Redundant CSS declarations are not showing up in Inspect Element panel. If you take a look at the included screenshot, you'll notice that *background: #bada55;* is not showing within the Styles section, but it does show in the Computed Style section. This is reproducible in WebKit nightly build and Chrome Canary by selecting any element that has a redundant declaration (you know, like a fallback for a CSS3 declaration) and inspecting it. You should notice the second declaration is missing in the Styles section. It does not occur in stable Safari or regular Chrome.
Attachments
Screenshot of problem. (299.37 KB, image/png)
2012-07-21 11:11 PDT, Justin Lowery
no flags
Patch (4.96 KB, patch)
2012-07-23 07:55 PDT, Pavel Feldman
no flags
Patch (10.79 KB, patch)
2012-07-23 10:41 PDT, Pavel Feldman
no flags
Patch (43.45 KB, patch)
2012-07-25 02:24 PDT, Pavel Feldman
no flags
Patch (44.79 KB, patch)
2012-07-25 06:07 PDT, Pavel Feldman
vsevik: review+
Pavel Feldman
Comment 1 2012-07-23 07:55:13 PDT
Pavel Feldman
Comment 2 2012-07-23 10:41:52 PDT
Pavel Feldman
Comment 3 2012-07-25 02:24:01 PDT
Pavel Feldman
Comment 4 2012-07-25 06:07:09 PDT
Vsevolod Vlasov
Comment 5 2012-07-25 06:24:02 PDT
Comment on attachment 154301 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154301&action=review > Source/WebCore/inspector/InspectorCSSAgent.cpp:798 > + CSSPropertyID longhandID = *(shorthand.properties() + j); Please use []. > Source/WebCore/inspector/InspectorStyleSheet.cpp:575 > // else shorthandName is not set Please remove this line and shorthandName. > Source/WebCore/inspector/front-end/StylesSidebarPane.js:1103 > + // For style-based properties, try generating shorthands. You already have a similar comment on line 1097
Vsevolod Vlasov
Comment 6 2012-07-25 06:36:22 PDT
Comment on attachment 154333 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=154333&action=review > LayoutTests/inspector/styles/inject-stylesheet-expected.txt:-60 > -/-- overloaded --/ background: red; Please make sure this is fixed before landing.
Pavel Feldman
Comment 7 2012-07-25 06:49:11 PDT
Note You need to log in before you can comment on or make changes to this bug.