Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=91931

Reviewed by Vsevolod Vlasov.

- Synthetic shorthand values are now only returned for source-less styles
- CSSAgents reports longhands along with the property names in getSupportedCSSProperties
- StylesSidebarPane now has two paths: for source-enabled styles and for CSSOM-based ones (UA styles)
- CSSStyleModel uses style metainfo as a source of shorthand / longhand relationship now

Test: inspector/styles/styles-overriden-properties.html

* inspector/Inspector.json:
* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::getSupportedCSSProperties):
* inspector/InspectorCSSAgent.h:
(InspectorCSSAgent):
* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyle::styleWithProperties):
* inspector/front-end/CSSCompletions.js:
(WebInspector.CSSCompletions):
(WebInspector.CSSCompletions.requestCSSNameCompletions):
(WebInspector.CSSCompletions.prototype._closest):
(WebInspector.CSSCompletions.prototype.longhands):
(WebInspector.CSSCompletions.prototype.shorthands):
* inspector/front-end/CSSStyleModel.js:
(WebInspector.CSSStyleDeclaration):
(WebInspector.CSSStyleDeclaration.prototype.longhandProperties):
(WebInspector.CSSStyleDeclaration.prototype.shorthandValue):
(WebInspector.CSSStyleDeclaration.prototype.newBlankProperty):
(WebInspector.CSSProperty):
(WebInspector.CSSProperty.parsePayload):
* inspector/front-end/SourceCSSTokenizer.js:
(WebInspector.SourceCSSTokenizer):
* inspector/front-end/SourceCSSTokenizer.re2js:
* inspector/front-end/StylesSidebarPane.js:
(WebInspector.StylePropertiesSection.prototype.isPropertyOverloaded):
(WebInspector.StylePropertiesSection.prototype.update):
(WebInspector.StylePropertiesSection.prototype.onpopulate):
(WebInspector.StylePropertyTreeElement.prototype):

LayoutTests: Web Inspector: Redundant Style Declarations Missing in Styles Section
https://bugs.webkit.org/show_bug.cgi?id=91931

Reviewed by Vsevolod Vlasov.

* http/tests/inspector/elements-test.js:
(initialize_ElementTest.InspectorTest.dumpStyleTreeItem):
* inspector/elements/elements-panel-styles-expected.txt:
* inspector/styles/force-pseudo-state-expected.txt:
* inspector/styles/inject-stylesheet-expected.txt:
* inspector/styles/lazy-computed-style-expected.txt:
* inspector/styles/styles-overriden-properties-expected.txt: Added.
* inspector/styles/styles-overriden-properties.html: Added.
* inspector/styles/styles-update-from-js-expected.txt:
* platform/chromium/inspector/styles/inject-stylesheet-expected.txt: Removed.

Canonical link: https://commits.webkit.org/110052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123612 268f45cc-cd09-0410-ab3c-d52691b4dbfc