Source/WebCore/inspector/front-end/CSSCompletions.js
@@ -32,10 +32,31 @@
 
 /**
  * @constructor
+ * @param {Array.<CSSAgent.CSSPropertyInfo>} properties
  */
-WebInspector.CSSCompletions = function(values, acceptEmptyPrefix)
+WebInspector.CSSCompletions = function(properties, acceptEmptyPrefix)
 {
-    this._values = values.slice();
+    this._values = [];
+    this._longhands = {};
+    this._shorthands = {};
+    for (var i = 0; i < properties.length; ++i) {
+        var propertyName = properties[i].name;
+        this._values.push(propertyName);
+
+        var longhands = properties[i].longhands;
+        if (longhands) {
+            this._longhands[propertyName] = longhands;
+            for (var j = 0; j < longhands.length; ++j) {
+                var longhandName = longhands[j];
+                var shorthands = this._shorthands[longhandName];
+                if (!shorthands) {
+                    shorthands = [];
+                    this._shorthands[longhandName] = shorthands;
+                }
+                shorthands.push(propertyName);
+            }
+        }
+    }
     this._values.sort();
     this._acceptEmptyPrefix = acceptEmptyPrefix;
 }
@@ -44,14 +65,14 @@ WebInspector.CSSCompletions = function(values, acceptEmptyPrefix)
 /**
  * @type {WebInspector.CSSCompletions}
  */
-WebInspector.CSSCompletions.cssNameCompletions = null;
+WebInspector.CSSCompletions.cssPropertiesMetainfo = null;
 
 WebInspector.CSSCompletions.requestCSSNameCompletions = function()
 {
-    function propertyNamesCallback(error, names)
+    function propertyNamesCallback(error, properties)
     {
         if (!error)
-            WebInspector.CSSCompletions.cssNameCompletions = new WebInspector.CSSCompletions(names, false);
+            WebInspector.CSSCompletions.cssPropertiesMetainfo = new WebInspector.CSSCompletions(properties, false);
     }
     CSSAgent.getSupportedCSSProperties(propertyNamesCallback);
 }
@@ -142,5 +163,23 @@ WebInspector.CSSCompletions.prototype = {
         var j = propertiesWithPrefix.indexOf(str);
         j = (j + propertiesWithPrefix.length + shift) % propertiesWithPrefix.length;
         return propertiesWithPrefix[j];
+    },
+
+    /**
+     * @param {string} shorthand
+     * @return {?Array.<string>}
+     */
+    longhands: function(shorthand)
+    {
+        return this._longhands[shorthand];
+    },
+
+    /**
+     * @param {string} longhand
+     * @return {?Array.<string>}
+     */
+    shorthands: function(longhand)
+    {
+        return this._shorthands[longhand];
     }
 }
