Source/WebCore/inspector/front-end/CSSStyleModel.js
@@ -406,7 +406,6 @@ WebInspector.CSSStyleDeclaration = function(payload)
     this._shorthandValues = WebInspector.CSSStyleDeclaration.buildShorthandValueMap(payload.shorthandEntries);
     this._livePropertyMap = {}; // LIVE properties (source-based or style-based) : { name -> CSSProperty }
     this._allProperties = []; // ALL properties: [ CSSProperty ]
-    this._longhandProperties = {}; // shorthandName -> [ CSSProperty ]
     this.__disabledProperties = {}; // DISABLED properties: { index -> CSSProperty }
     var payloadPropertyCount = payload.cssProperties.length;
 
@@ -421,16 +420,6 @@ WebInspector.CSSStyleDeclaration = function(payload)
         var name = property.name;
         this[propertyIndex] = name;
         this._livePropertyMap[name] = property;
-
-        // Index longhand properties.
-        if (property.shorthand) { // only for parsed
-            var longhands = this._longhandProperties[property.shorthand];
-            if (!longhands) {
-                longhands = [];
-                this._longhandProperties[property.shorthand] = longhands;
-            }
-            longhands.push(property);
-        }
         ++propertyIndex;
     }
     this.length = propertyIndex;
@@ -521,33 +510,25 @@ WebInspector.CSSStyleDeclaration.prototype = {
      * @param {string} name
      * @return {Array.<WebInspector.CSSProperty>}
      */
-    getLonghandProperties: function(name)
+    longhandProperties: function(name)
     {
-        return this._longhandProperties[name] || [];
+        var longhands = WebInspector.CSSCompletions.cssPropertiesMetainfo.longhands(name);
+        var result = [];
+        for (var i = 0; longhands && i < longhands.length; ++i) {
+            var property = this._livePropertyMap[longhands[i]];
+            if (property)
+                result.push(property);
+        }
+        return result;
     },
 
     /**
      * @param {string} shorthandProperty
      * @return {string}
      */
-    getShorthandValue: function(shorthandProperty)
+    shorthandValue: function(shorthandProperty)
     {
-        var property = this.getLiveProperty(shorthandProperty);
-        return property ? property.value : this._shorthandValues[shorthandProperty];
-    },
-
-    /**
-     * @param {string} shorthandProperty
-     * @return {?string}
-     */
-    getShorthandPriority: function(shorthandProperty)
-    {
-        var priority = this.getPropertyPriority(shorthandProperty);
-        if (priority)
-            return priority;
-
-        var longhands = this._longhandProperties[shorthandProperty];
-        return longhands ? this.getPropertyPriority(longhands[0]) : null;
+        return this._shorthandValues[shorthandProperty];
     },
 
     /**
@@ -578,7 +559,7 @@ WebInspector.CSSStyleDeclaration.prototype = {
     newBlankProperty: function(index)
     {
         index = (typeof index === "undefined") ? this.pastLastSourcePropertyIndex() : index;
-        return new WebInspector.CSSProperty(this, index, "", "", "", "active", true, false, "", "");
+        return new WebInspector.CSSProperty(this, index, "", "", "", "active", true, false, "");
     },
 
     /**
@@ -685,10 +666,9 @@ WebInspector.CSSRule.prototype = {
  * @param {string} status
  * @param {boolean} parsedOk
  * @param {boolean} implicit
- * @param {string} shorthand
  * @param {?string=} text
  */
-WebInspector.CSSProperty = function(ownerStyle, index, name, value, priority, status, parsedOk, implicit, shorthand, text)
+WebInspector.CSSProperty = function(ownerStyle, index, name, value, priority, status, parsedOk, implicit, text)
 {
     this.ownerStyle = ownerStyle;
     this.index = index;
@@ -698,7 +678,6 @@ WebInspector.CSSProperty = function(ownerStyle, index, name, value, priority, st
     this.status = status;
     this.parsedOk = parsedOk;
     this.implicit = implicit;
-    this.shorthand = shorthand;
     this.text = text;
 }
 
@@ -715,9 +694,8 @@ WebInspector.CSSProperty.parsePayload = function(ownerStyle, index, payload)
     // parsedOk: true
     // implicit: false
     // status: "style"
-    // shorthandName: ""
     var result = new WebInspector.CSSProperty(
-        ownerStyle, index, payload.name, payload.value, payload.priority || "", payload.status || "style", ("parsedOk" in payload) ? !!payload.parsedOk : true, !!payload.implicit, payload.shorthandName || "", payload.text);
+        ownerStyle, index, payload.name, payload.value, payload.priority || "", payload.status || "style", ("parsedOk" in payload) ? !!payload.parsedOk : true, !!payload.implicit, payload.text);
     return result;
 }
 
